tests/transpiler/x/zig/len_map.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/len_map.zig:5:5: error: expected type 'void', found 'error{AccessDenied,Unexpected,DiskQuota,FileTooBig,InputOutput,NoSpaceLeft,DeviceBusy,InvalidArgument,BrokenPipe,SystemResources,OperationAborted,NotOpenForWriting,LockViolation,WouldBlock,ConnectionResetByPeer}'
/workspace/mochi/tests/transpiler/x/zig/len_map.zig:4:15: note: function cannot return an error
/root/.local/share/mise/installs/zig/0.12.0/lib/std/mem.zig:1020:17: error: invalid type given to std.mem.len: hash_map.HashMap([]const u8,i64,hash_map.StringContext,80)
