tests/transpiler/x/zig/len_map.zig
// Generated by Mochi Zig transpiler on 2025-07-20 09:42 +0000
const std = @import("std");

pub fn main() void {
    std.debug.print("{any}\n", .{std.mem.len(blk: { var m = std.StringHashMap(i64).init(std.heap.page_allocator); m.put("a", 1) catch unreachable; m.put("b", 2) catch unreachable; break :blk m; })});
}
